# filesystem-charms

./: CONTRIBUTING.md  README.md  SECURITY.md  justfile  pyproject.toml  repository.py
.github/: dependabot.yaml  pull_request_template.md
.github/workflows/: ci.yaml  publish.yaml
charms/cephfs-server-proxy/: charmcraft.yaml  pyproject.toml
charms/cephfs-server-proxy/src/: charm.py
charms/cephfs-server-proxy/terraform/: README.md  outputs.tf  variables.tf
charms/filesystem-client/: charmcraft.yaml  pyproject.toml
charms/filesystem-client/src/: charm.py
charms/filesystem-client/terraform/: README.md  main.tf  outputs.tf  terraform.tf  variables.tf
charms/lustre/: charmcraft.yaml  pyproject.toml
charms/lustre-server/: charmcraft.yaml  pyproject.toml
charms/lustre-server-proxy/: charmcraft.yaml  pyproject.toml
charms/lustre-server-proxy/src/: charm.py
charms/lustre-server-proxy/terraform/: README.md  main.tf  outputs.tf  variables.tf
charms/lustre-server/src/: charm.py  config.py  constants.py  errors.py  lustre_fs.py  lustre_peer.py  state.py
charms/lustre-server/tests/integration/: test_charm.py
charms/lustre-server/tests/unit/: test_charm.py  test_lustre_fs.py  test_lustre_peer.py  test_state.py
charms/lustre/src/: charm.py  constants.py  errors.py  exceptions.py  kernel_pin.py  lustre_fs.py  (+4 more)
charms/nfs-server-proxy/: charmcraft.yaml  pyproject.toml
charms/test-mount-client/: charmcraft.yaml  pyproject.toml
internal/lustre-ops/: pyproject.toml
tests/integration/: conftest.py  constants.py  helpers.py  test_charm.py  test_lustre.py
(+30 files in other folders)
