# Copyright 2026 dominic.sloanmurphy@canonical.com
# See LICENSE file for licensing details.

[project]
name = "lustre-server"
version = "0.0.1"
requires-python = "==3.12.*"
dependencies = ["ops", "pydantic", "charmlibs-apt", "charmed-hpc-libs[ops]"]

[tool.repository]
libraries = [
    "filesystem-client.filesystem_info"
]
